--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,7 @@ layout: default
 ---
 <div id="post">
 {{ content }}
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </div>
 
 <div id="related">
