--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,12 @@
 ---
 layout: default
 ---
+<head>
+	<meta name="viewport" content="width=device-width, initial-scale=0.9">
+</head>
+
 <div id="post">
 {{ content }}
-<meta name="viewport" content="width=device-width, initial-scale=1">
 </div>
 
 <div id="related">
